# awtools

./: Cargo.toml  README.md
aw_core/: Cargo.toml  build.rs
aw_core/src/: crypt_a4.rs  crypt_aes.rs  crypt_rsa.rs  crypt_stream.rs  encoding.rs  lib.rs  reason_code.rs  reg_lic.rs
aw_core/src/net/: connection.rs  mod.rs  packet.rs  packet_var.rs  protocol.rs
aw_db/: Cargo.toml
aw_db/src/: config.rs  error.rs  lib.rs  mysql_wrap.rs  row.rs  sqlite_wrap.rs
aw_sdk/: Cargo.toml
aw_sdk/src/: error.rs  event.rs  instance.rs  instance_conn.rs  lib.rs  object_pass.rs  uni.rs  world.rs
aw_sdk/src/msg/: mod.rs
aw_sdk/src/msg/handler/: mod.rs
licgen/: Cargo.toml
licgen/src/: main.rs
licinfo/: Cargo.toml
licinfo/src/: main.rs
universe/: Cargo.toml  README.md  build.rs
universe/src/: attributes.rs  client.rs  config.rs  debug_alloc.rs  ejection.rs  license.rs  main.rs  packet_handler.rs  player.rs  telegram.rs  timestamp.rs  universe_connection.rs  universe_license.rs  universe_server.rs  world.rs
universe/src/configuration/: config.rs  configurator.rs  mod.rs
universe/src/database/: attrib.rs  cav.rs  citizen.rs  contact.rs  eject.rs  license.rs  mod.rs  telegram.rs
universe/src/keys/: aw.priv  aw.pub  vortex.priv  vortex.pub
universe/src/packet_handler/: common.rs  common_handler.rs  mod.rs  user_handler.rs  world_handler.rs
universe/src/packet_handler/common/: botgram.rs  encryption.rs  mod.rs  public_key_request.rs  public_key_response.rs  stream_key_response.rs
universe/src/packet_handler/player/: attribute.rs  attribute_change.rs  cav_get.rs  citizen.rs  contact.rs  heartbeat.rs  immigrate.rs  license.rs  login.rs  mod.rs  telegram.rs  telegram_get.rs  telegram_send.rs  teleport.rs  user_list.rs  world.rs  world_list.rs  world_lookup.rs
universe/src/packet_handler/player/citizen/: citizen_add.rs  citizen_change.rs  citizen_delete.rs  citizen_lookup_by_name.rs  citizen_lookup_by_number.rs  citizen_next.rs  citizen_prev.rs  mod.rs
universe/src/packet_handler/player/contact/: contact_add.rs  contact_change.rs  contact_confirm.rs  contact_delete.rs  contact_list.rs  mod.rs  set_afk.rs
universe/src/packet_handler/player/eject/: eject_add.rs  eject_delete.rs  eject_lookup.rs  eject_next.rs  eject_prev.rs  mod.rs
universe/src/packet_handler/player/join/: join_reply.rs  join_request.rs  mod.rs
universe/src/packet_handler/player/license/: license_add.rs  license_by_name.rs  license_delete.rs  license_next.rs  license_prev.rs  mod.rs
universe/src/packet_handler/world/: identify.rs  instance.rs  mod.rs  player.rs  server.rs  world_server_start.rs  world_start.rs  world_stats_update.rs  world_stop.rs
universe/src/tabs/: contact_list.rs  mod.rs  player_list.rs  world_list.rs
(+10 files in other folders)
