[package]
name = "aw_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsaref-rs = { git = "https://github.com/ChrisMiuchiz/rsaref-rs.git" }
rand = "0.8.5"
bincode = "1.3.3"
serde = { version = "1.0.137", features = ["derive"] }
base64 = "0.13.0"
byteorder = "1.4.3"
num-traits = "0.2.15"
num-derive = "0.3.3"