[package]
name = "universe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aw_core = { path = "../aw_core" }
num-traits = "0.2.15"
num-derive = "0.3.3"
toml = "0.5.9"
serde = "1.0.138"
mysql = "22.2.0"