[package]
name = "universe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aw_core = { path = "../aw_core", default-features = false }
num-traits = "0.2.15"
num-derive = "0.3.3"
toml = "0.5.9"
serde = "1.0.138"
mysql = { version = "23.0.1", default-features = false, features = ["rustls-tls"] }
env_logger = "0.9.0"
log = "0.4.17"
clap = { version = "3.2.8", features = ["derive"] }
rand = "0.8.5"
bitflags = "1.3.2"
md5 = "0.7.0"
byteorder = "1.5.0"
ctrlc = "3.4.2"

[features]
protocol_v4 = ["aw_core/stream_cipher_rc4"]
protocol_v6 = ["aw_core/stream_cipher_aes"]
default = ["protocol_v4"]
